[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ── Project metadata (PEP 621) ──────────────────────────────────────────

[project]
name = "dit"
version = "1.5"
description = "Python package for information theory on discrete random variables."
readme = "README.rst"
license = "BSD-3-Clause"
requires-python = ">=3.9"
authors = [
    { name = "chebee7i", email = "admin@dit.io" },
    { name = "Ryan G. James", email = "dit@autoplectic.com" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "boltons",
    "debtcollector",
    "lattices>=0.3.5",
    "loguru",
    "networkx>=2.6",
    "numpy>=1.22",
    "PLTable",
    "scipy>=1.7",
]

[project.urls]
Homepage = "http://dit.io"
Repository = "https://github.com/dit/dit"
Documentation = "http://docs.dit.io"

[project.optional-dependencies]
test = [
    "hypothesis>=6.0",
    "hypothesis[numpy]",
    "pytest>=7.0",
    "pytest-cov",
    "pytest-rerunfailures",
    "pytest-xdist",
]
jax = [
    "jax",
    "jaxlib",
]
torch = [
    "torch",
]
xarray = [
    "xarray",
]
optional = [
    "colorama",
    "matplotlib",
    "numdifftools",
    "pint",
    "scikit-learn",
]
docs = [
    "ipython",
    "nbconvert",
    "sphinx",
]
dev = [
    "dit[test]",
    "dit[optional]",
    "dit[docs]",
    "dit[xarray]",
    "ruff",
]

# ── Build configuration ─────────────────────────────────────────────────

[tool.hatch.build.targets.sdist]
include = [
    "dit/",
    "tests/",
    "README.rst",
    "LICENSE.txt",
    "CREDITS.rst",
]

[tool.hatch.build.targets.wheel]
packages = ["dit"]

# ── Pytest ───────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
addopts = [
    "--cov=dit",
    "--cov-report=term-missing",
    "--numprocesses=auto",
    "--durations=25",
    "--durations-min=1.0",
    "--reruns=1",
]
markers = [
    "slow: mark that the test may take several minutes to complete.",
    "cython: mark that a test requires cython compiled extensions.",
]

# ── Coverage ─────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["dit"]
omit = ["dit/inference/pycounts*"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
]

# ── Ruff (replaces flake8 + isort) ──────────────────────────────────────

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E741",   # ambiguous variable name
    "E731",   # lambda assignment
    "E722",   # bare except
    "F403",   # star imports
    "F405",   # may be undefined from star import
    "N802",   # function name should be lowercase
    "N803",   # argument name should be lowercase
    "N806",   # variable in function should be lowercase
    "N816",   # mixed case variable in global scope
    "B001",   # bare except
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["N817", "S101"]
"__init__.py" = ["F401", "F403"]
"dit/abc.py" = ["F401", "N812", "N814", "N817"]
"dit/divergences/pmf.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["dit"]
