[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# ── Project metadata (PEP 621) ──────────────────────────────────────────

[project]
name = "dit"
dynamic = ["version"]
description = "Python package for information theory on discrete random variables."
readme = "README.rst"
license = "BSD-3-Clause"
requires-python = ">=3.11"
authors = [
    { name = "chebee7i", email = "admin@dit.io" },
    { name = "Ryan G. James", email = "dit@autoplectic.com" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "boltons",
    "debtcollector",
    "lattices>=0.5.0",
    "loguru",
    "networkx>=2.6",
    "numpy>=1.22",
    "PLTable",
    "scipy>=1.7",
    "xarray",
]

[project.urls]
Homepage = "http://dit.io"
Repository = "https://github.com/dit/dit"
Documentation = "http://docs.dit.io"

[project.optional-dependencies]
test = [
    "hypothesis>=6.0",
    "hypothesis[numpy]",
    "pytest>=9.0.3",
    "pytest-cov",
    "pytest-rerunfailures",
    "pytest-sugar",
    "pytest-xdist",
]
jax = [
    "jax",
    "jaxlib",
    "optimistix",
    "slsqp-jax",
]
torch = [
    "torch",
]
pytensor = [
    "pytensor",
]
optional = [
    "colorama",
    "matplotlib",
    "numdifftools",
    "pint",
    "pycddlib-standalone",
    "pypoman",
    "scikit-learn",
]
docs = [
    "dit[optional]",
    "hypothesis",
    "ipython",
    "matplotlib",
    "nbconvert",
    "sphinx",
    "sphinx-rtd-theme",
    "sphinxcontrib-bibtex",
    "python-ternary",
]
dev = [
    "dit[test]",
    "dit[optional]",
    "dit[docs]",
    "dit[jax]",
    "dit[torch]",
    "dit[pytensor]",
    "ruff",
    "ty",
]

# ── uv ──────────────────────────────────────────────────────────────────

[tool.uv]
override-dependencies = ["pycddlib; sys_platform == 'never'"]

[tool.uv.sources]
# lattices 0.5.0 (constraint_lattice, Möbius API, FM3) — git tag until PyPI release
lattices = { git = "https://github.com/dit/lattices.git", tag = "v0.5.0" }

# ── Build configuration ─────────────────────────────────────────────────

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = [
    "dit/",
    "tests/",
    "README.rst",
    "LICENSE.txt",
    "CREDITS.rst",
]

[tool.hatch.build.targets.wheel]
packages = ["dit"]

# ── Pytest ───────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
addopts = [
    "--cov=dit",
    "--cov-report=term-missing",
    "--numprocesses=auto",
    "--durations=25",
    "--durations-min=1.0",
    "--reruns=1",
    "-m", "not slow and not very_slow",
]
markers = [
    "slow: mark that the test may take several minutes to complete. Excluded by default.",
    "very_slow: mark that the test is extremely slow (e.g. torch optimization backend). Excluded by default.",
    "cython: mark that a test requires cython compiled extensions.",
]
filterwarnings = [
    "ignore::pytest.PytestUnknownMarkWarning",
]

# ── Coverage ─────────────────────────────────────────────────────────────

[tool.coverage.run]
branch = true
source = ["dit"]
omit = [
    "dit/inference/pycounts*",
    # don't include tests
    "*/tests/*",
    # this is just convenience imports
    "*/dit/abc.py",
    # excluded due to testing difficulty
    "*/dit/utils/logger.py",
    # exclude hypothesis strategies, because they don't get covered
    "*/dit/utils/testing.py",
    # don't cover plotting code
    "dit/rate_distortion/plotting.py",
    "*/dit/rate_distortion/gray_wyner/plotting.py",
    # don't cover table generation
    "dit/pid/helpers.py",
    # JAX/Torch/PyTensor optimization backends are only exercised by very_slow tests
    "*/dit/algorithms/optimization_jax.py",
    "*/dit/algorithms/optimization_torch.py",
    "*/dit/algorithms/optimization_pytensor.py",
]

[tool.coverage.report]
show_missing = true
ignore_errors = true
exclude_lines = [
    "pragma: no cover",
    # debug-only code
    "def __repr__",
    "def _repr_html_",
    "if self\\.debug",
    # deprecated code
    "@removals.remove",
    # abstract code
    "@abstractmethod",
    # defensive assertions
    "raise AssertionError",
    "raise NotImplementedError",
    # non-runnable code
    "if 0:",
    "if __name__ == .__main__.:",
    # fixtures
    "def setup_module",
    "def teardown_module",
    # runtime errors
    "except RuntimeError",
    # skipped tests
    "@pytest.mark.skip",
]

[tool.coverage.html]
directory = "coverage_html_report"

# ── Ruff (replaces flake8 + isort) ──────────────────────────────────────

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "B019",   #
    "C416",   #
    "E501",   # line too long (handled by formatter)
    "E741",   # ambiguous variable name
    "E731",   # lambda assignment
    "E722",   # bare except
    "F403",   # star imports
    "F405",   # may be undefined from star import
    "N802",   # function name should be lowercase
    "N803",   # argument name should be lowercase
    "N806",   # variable in function should be lowercase
    "N812",   # non-lowercase variables as import aliases
    "N816",   # mixed case variable in global scope
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["N817", "S101"]
"__init__.py" = ["F401", "F403"]
"dit/abc.py" = ["F401", "N812", "N814", "N817"]
"dit/algorithms/__init__.py" = ["I001"]
"dit/divergences/pmf.py" = ["F401"]
"dit/pid/*" = ["N801"]
"tests/pid/*.py" = ["N801"]

[tool.ruff.lint.isort]
known-first-party = ["dit"]

# ── ty (type checking) ──────────────────────────────────────────────────

[tool.ty.environment]
python-version = "3.13"

[tool.ty.analysis]
# Optional/conditional dependencies and compiled extensions
allowed-unresolved-imports = [
    # Optional third-party packages
    "cvxopt.**",
    "jax.**",
    "matplotlib.**",
    "numdifftools.**",
    "pypoman.**",
    "pytensor.**",
    "torch.**",
    "ternary.**",
    "sklearn.**",
    "pint.**",
    "colorama.**",
    "prettytable.**",
    # Cython compiled extensions (may not be built)
    "dit.inference.pycounts.**",
    "dit.math._close.**",
    "dit.math._samplediscrete.**",
]

[tool.ty.rules]
# ── Errors (these catch real bugs) ──
unresolved-import = "error"
# ── Warnings (noisy in an untyped codebase, but good to surface) ──
unresolved-attribute = "warn"
call-non-callable = "warn"
invalid-argument-type = "warn"
not-subscriptable = "warn"
invalid-method-override = "warn"
missing-argument = "warn"
invalid-assignment = "warn"
unsupported-operator = "warn"
not-iterable = "warn"
unknown-argument = "warn"
too-many-positional-arguments = "warn"
no-matching-overload = "warn"
possibly-unresolved-reference = "warn"

[tool.ty.src]
include = ["dit/", "tests/"]

# Relax rules in tests
[[tool.ty.overrides]]
include = ["tests/**"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
missing-argument = "ignore"
not-iterable = "ignore"
